Update Automacao de Processo.ipynb
Adicionado Produtos diferentes vendidos por ano e por dia.

Adicionado tabela de venda total por dia para calcular ticket médio

--- a/Automacao de Processo.ipynb
+++ b/Automacao de Processo.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 21,
    "metadata": {
     "scrolled": true
    },
@@ -426,9 +426,149 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1711968\n",
-      "1259\n"
+      "O faturamento do ano foi de R$ 1711968\n",
+      "O faturamento do dia foi de R$ 1259\n",
+      "120 produtos direntes vendidos no ano\n",
+      "2 produtos diferentes vendidos no dia\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID Loja</th>\n",
+       "      <th>Quantidade</th>\n",
+       "      <th>Valor Unitário</th>\n",
+       "      <th>Valor Final</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Código Venda</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>6</td>\n",
+       "      <td>4</td>\n",
+       "      <td>271</td>\n",
+       "      <td>671</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>6</td>\n",
+       "      <td>2</td>\n",
+       "      <td>221</td>\n",
+       "      <td>221</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>73</th>\n",
+       "      <td>6</td>\n",
+       "      <td>6</td>\n",
+       "      <td>127</td>\n",
+       "      <td>367</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>137</th>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>50</td>\n",
+       "      <td>100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>147</th>\n",
+       "      <td>9</td>\n",
+       "      <td>7</td>\n",
+       "      <td>247</td>\n",
+       "      <td>544</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>69845</th>\n",
+       "      <td>9</td>\n",
+       "      <td>3</td>\n",
+       "      <td>623</td>\n",
+       "      <td>623</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>69888</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>294</td>\n",
+       "      <td>294</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>69916</th>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>700</td>\n",
+       "      <td>1400</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>69962</th>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>78</td>\n",
+       "      <td>156</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>69976</th>\n",
+       "      <td>6</td>\n",
+       "      <td>5</td>\n",
+       "      <td>509</td>\n",
+       "      <td>1259</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2182 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              ID Loja  Quantidade  Valor Unitário  Valor Final\n",
+       "Código Venda                                                  \n",
+       "2                   6           4             271          671\n",
+       "7                   6           2             221          221\n",
+       "73                  6           6             127          367\n",
+       "137                 3           2              50          100\n",
+       "147                 9           7             247          544\n",
+       "...               ...         ...             ...          ...\n",
+       "69845               9           3             623          623\n",
+       "69888               3           1             294          294\n",
+       "69916               3           2             700         1400\n",
+       "69962               3           2              78          156\n",
+       "69976               6           5             509         1259\n",
+       "\n",
+       "[2182 rows x 4 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -439,8 +579,21 @@
     "#Faturamento\n",
     "faturamento_ano = loja_vendas['Valor Final'].sum()\n",
     "faturamento_dia = vendas_loja_dia['Valor Final'].sum()\n",
-    "print(faturamento_ano)\n",
-    "print(faturamento_dia)"
+    "print(f'O faturamento do ano foi de R$ {faturamento_ano}')\n",
+    "print(f'O faturamento do dia foi de R$ {faturamento_dia}')\n",
+    "\n",
+    "#Diversidade de produtos\n",
+    "qtd_produtos_ano = len(loja_vendas['Produto'].unique())\n",
+    "print(f'{qtd_produtos_ano} produtos direntes vendidos no ano')\n",
+    "\n",
+    "qtd_produtos_dia = len(vendas_loja_dia['Produto'].unique())\n",
+    "print(f'{qtd_produtos_dia} produtos diferentes vendidos no dia')\n",
+    "\n",
+    "#ticket medio \n",
+    "\n",
+    "valor_venda = loja_vendas.groupby('Código Venda').sum()\n",
+    "\n",
+    "display(valor_venda)"
    ]
   },
   {
